# hack-ai-2024

./: .gitignore  .python-version  README.md  apt.txt  postBuild.bash  pyproject.toml  requirements.txt  st-requerements.txt  test.py  variables.env
.project/: spec.yaml
apps/: manager.py  whisperx.sh
bots/discord/: user.py
bots/telegram/: main.py
dsc_hackai/: app.db  database.py  main.py  process_audio.py  process_llm.py  process_vision.py  processing.py  processing_llm.py  schemas.py  shorten_audio.py  shorten_video.py  test_main.py  video_description.py
dsc_hackai/api/: gemma.py  llava_next.py  whisperx.py
dsc_hackai/audio/: _process_audio.py  ai_textual_report.py  find_similiar_sentences_transcription.py  srt_gen.py
dsc_hackai/bots/discord/: bot.py  classes_toolkit.py  settings.py  user.py  utils.py
dsc_hackai/bots/discord/cogs/: api_interaction.py
dsc_hackai/bots/telegram/: main.py
dsc_hackai/machine_learning_apis/: llm.py  minicpm.py  whisper.py  whisperx.py
dsc_hackai/video/: _process_video.py
frontend/: Home.py
frontend/components/: analysis.py  login.py  query.py  upload.py  video_player.py
frontend/pages/: 1_🎬_DeapVideo.py  2_About.py  2_🔍_Query.py  Login.py
frontend/templates/: video_player.html
frontend/utils/: __init__.py  api.py  auth.py  mockups.py  processing.py  youtube.py
mockups/: auth.py  videos.py
test/: queen-radio-ga-ga.json
