[tool.poetry]
name = "dsc_hackai"
version = "0.1.0"
description = "Summarize video with usage of visual data and audio data"
authors = ["DSC"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "3.10.13"
ollama = "^0.3.3"
gradio-client = "^1.3.0"
librosa = "^0.10.2.post1"
orjson = "3.10.0"
faiss-cpu = "^1.8.0.post1"

langchain-community = "0.3.0"
langchain-huggingface = "0.1.0"
langchain = "^0.3.0"
fastapi = "^0.115.0"
pytest = "^8.3.3"
python-multipart = "^0.0.10"
uvicorn = "^0.30.6"
pytest-fastapi = "^0.1.0"
[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.scripts]
main = "dsc_hackai.main:main"